--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="container">
             <h2 class="text-center mb-5">Amorchis</h2>
             <p class="lead text-center">
-                Desde el momento en que te conocí, supe que mi vida cambiaría para siempre. Tu sonrisa ilumina mis días y tu amor me hace la persona más afortunada del mundo.
+                Hemos pasado muy poco tiempo juntos, pero han sido inolvidables los momentos en los que he estado a tu lado. Quiero agredecerte por haber llegado a mi vida y hacerme tan feliz. Tu sonrisa ilumina mis días y tu amor me hace la persona más afortunada del mundo.
             </p>
             <p class="lead text-center">
                 Gracias por cada instante compartido, por cada risa y cada abrazo. Eres mi mundo entero y no puedo esperar a crear más recuerdos juntos.
