--- a/index.html
+++ b/index.html
@@ -82,75 +82,75 @@
             <div class="row">
                 <!-- Imagen 1 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto1.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto1.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 2 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto2.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto2.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 3 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto3.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto3.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 4 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto4.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto4.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 5 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto5.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto5.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 6 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto6.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto6.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 7 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto7.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto7.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 8 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto8.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto8.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 9 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto9.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto9.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 10 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto10.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto10.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 11 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto11.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto11.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 12 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto12.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto12.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 13 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto13.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto13.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 14 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto14.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto14.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 15 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto15.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto15.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 16 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto16.jpeg" alt="Momento 1" class="img-fluid rounded">
+                    <img src="images/Foto16.jpeg" alt="Momento 1" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 17 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto17.jpeg" alt="Momento 2" class="img-fluid rounded">
+                    <img src="images/Foto17.jpeg" alt="Momento 2" class="img-fluid rounded">
                 </div>
                 <!-- Imagen 18 -->
                 <div class="col-md-4 mb-4">
-                    <img src="images/foto18.jpeg" alt="Momento 3" class="img-fluid rounded">
+                    <img src="images/Foto18.jpeg" alt="Momento 3" class="img-fluid rounded">
                 </div>
             </div>
         </div>
